--- a/src/static/styles/extras.css
+++ b/src/static/styles/extras.css
@@ -116,7 +116,7 @@ code {
 
 #fl_menu .label {
 	padding-left: 20px;
-	padding-right: 20px;
+	padding-right: 0;
 	line-height: 50px;
 	font-family: "Arial Black", Arial, Helvetica, sans-serif;
 	font-size: 14px;
@@ -135,6 +135,7 @@ code {
 	-webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
 	-moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
 	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+	line-height: 0.7em;
 }
 
 #fl_menu .menu .menu_item {
